@@ -6,6 +6,8 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+RH-2011-11-08-8: Enhancem.    - configurable mailer user
+
 RH-2011-11-08-7: Enhancem.    - removed old /proc group check
 
 RH-2011-11-08-6: Bugfix:      - fix funny \b chars in shepherd trace
